# TuniTrAIde

./: .env  .env.backend.example  .gitignore  .vercelignore  README.md  STREAMLIT_DEMO.md  eda.ipynb  pyproject.toml  real_time_testing.ipynb  real_time_utils.py  requirements.txt  streamlit_app.py  users.db  vercel.json
Anomaly detection/: anomaly_notebook.ipynb  filtered_anomaly_notebook.ipynb
Anomaly_detection/: anomaly_utils.py  filtered_anomaly_notebook.ipynb  history_analysis_dashboard_prototype.py
Forecasting/: forecasting_notebook.ipynb
RL/: eval_rl.py  rl_env.py  train_rl.py
agent/: explainability_utils.py  utils.py
app/: auth.py  crud.py  crud_regulator.py  database.py  index.py  init_db.py  main.py  models.py  routes_regulator.py  schemas.py
data/: forecast_next_5_days.csv  ilboursa_tunis_aaz.csv  index_historical_data.csv  sentiment_features.csv
frontend/: .env.example  .gitignore  index.html  package-lock.json  package.json  vite.config.js
models/: arima_params_TN0001000108.json  arima_params_TN0001100254.json  arima_params_TN0001200401.json  arima_params_TN0001400704.json  arima_params_TN0001600154.json  arima_params_TN0001800457.json  arima_params_TN0001900604.json  arima_params_TN0002100907.json  arima_params_TN0002600955.json  arima_params_TN0003200755.json  arima_params_TN0003400058.json  arima_params_TN0003900107.json  arima_params_TN0005700018.json  arima_params_TN0006530018.json  arima_params_TN0006560015.json  arima_params_TN0006580013.json  arima_params_TN0006590012.json  arima_params_TN0006610018.json  arima_params_TN0006660013.json  (+25 more)
(+117 files in other folders)
