[project]
name = "hackathon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "bcrypt==4.0.1",
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "email-validator>=2.3.0",
    "fastapi>=0.128.4",
    "lxml>=6.0.2",
    "pandas>=3.0.0",
    "passlib[bcrypt]==1.7.4",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.22",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.40.0",
]
