[project]
name = "hackathon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "altair<5",
    "bcrypt==4.0.1",
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "email-validator>=2.3.0",
    "fastapi>=0.128.4",
    "gymnasium>=1.2.3",
    "joblib>=1.5.3",
    "langchain>=1.2.9",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.9",
    "langchain-ollama>=1.0.1",
    "langgraph>=1.0.8",
    "lxml>=6.0.2",
    "numpy>=2.4.2",
    "pandas<3",
    "passlib[bcrypt]==1.7.4",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.22",
    "requests>=2.32.5",
    "scipy>=1.17.0",
    "sqlalchemy>=2.0.46",
    "stable-baselines3>=2.7.1",
    "statsmodels>=0.14.6",
    "streamlit>=1.25",
    "tensorboard>=2.20.0",
    "transformers>=5.1.0",
    "uvicorn>=0.40.0",
]
